--- a/gb/20/11/27/n12580474.md
+++ b/gb/20/11/27/n12580474.md
@@ -1,11 +1,11 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fxljth3580/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxljth3580/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fxljth3580/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fxljth3580/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fxljth3580/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxljth3580/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fxljth3580/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fxljth3580/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fxljth3580/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fxljth3580/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fxljth3580/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fxljth3580/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fxljth3580/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fxljth3580/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fxljth3580/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fxljth3580/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/fxljth3580/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fxljth3580/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/fxljth3580/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fxljth3580/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fxljth3580/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fxljth3580/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fxljth3580/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fxljth3580/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yirpaj3429/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>宁夏41法轮功学员遭非法关押绑架 近况不明</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/4e7e306d05949aa9ebe0ae505d366aad-320x200.jpg" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元2020年11月28日讯】近日，宁夏回族自治区<ahref="https://github.com/fxljth3580/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员投稿海外明慧网说，该市有41位法轮功学员遭非法关押和绑架，多数人情况不明。</p>
+	<p>【大纪元2020年11月28日讯】近日，宁夏回族自治区<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员投稿海外明慧网说，该市有41位法轮功学员遭非法关押和绑架，多数人情况不明。</p>
 <p>报导说，这41人中，遭非法关押监狱的有6人，其余35人中，有些人被非法关押在看守所或拘留所，有些人则去向不明。</p>
 <p>详情如下：</p>
 <p>1. 被非法关押在青海省门源监狱1人：胡建才被枉判7年。</p>
@@ -21,9 +21,9 @@
 <p>8. 被非法关押在吴忠市看守所1人：郭莲（玉）兰，2019年11月15日被绑架关押，今年已被冤判三年，上诉后维持了原判，目前关押地点不明。</p>
 <p>9. 宁夏盐池县被绑架1人：高兵，2020年6月18日被绑架，目前情况不明。</p>
 <p>10. 宁夏青铜峡市女教师陈晨2020年11月6日后失去联系，估计被绑架。</p>
-<p><ahref="https://github.com/fxljth3580/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>是以“真、善、忍”为原则的佛家修炼功法，改善身心健康效果神奇。1999年7月20日，中共时任总书记江泽民，因恐惧法轮功学员人数超过中共党员，且法轮功修炼原则“真、善、忍”与中共无神论及斗争意识形态不同，下令全力<ahref="https://github.com/fxljth3580/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3.md#1">迫害</a>。21年来，海外明慧网通过民间渠道，获悉四千多位法轮功学员被确认迫害致死，由于中共信息封锁，这个数字只是冰山一角。</p>
+<p><ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>是以“真、善、忍”为原则的佛家修炼功法，改善身心健康效果神奇。1999年7月20日，中共时任总书记江泽民，因恐惧法轮功学员人数超过中共党员，且法轮功修炼原则“真、善、忍”与中共无神论及斗争意识形态不同，下令全力<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3.md#1">迫害</a>。21年来，海外明慧网通过民间渠道，获悉四千多位法轮功学员被确认迫害致死，由于中共信息封锁，这个数字只是冰山一角。</p>
 <p>2017年8月，美国华府非政府机构“自由之家”发布中文版中国宗教自由报告表示，“国际学者反复得出的结论是，法轮功没有邪教的特征。”报告表示，中共对法轮功的“暴力镇压在前，邪教标签在后，中共是在镇压法轮功遭到国际社会和中国国内批评后才这样做的”。</p>
-<p>法轮大法信息中心执行主任布劳迪告诉美国国务院官员，对法轮功的<ahref="https://github.com/fxljth3580/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3.md#1">迫害</a>是进入二十一世纪后，中共发起的第一场大规模迫害；至今，中共对法轮功的迫害没有任何减轻迹象。</p>
+<p>法轮大法信息中心执行主任布劳迪告诉美国国务院官员，对法轮功的<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3.md#1">迫害</a>是进入二十一世纪后，中共发起的第一场大规模迫害；至今，中共对法轮功的迫害没有任何减轻迹象。</p>
 <p>2020年7月法轮功学员反迫害21周年之际，美国资深国会议员史密斯（Chris Smith）谴责中共迫害法轮功，要求中共停止迫害。他说：“他们（法轮功学员）是平和、可爱的人，他们所要求的，只是信仰和炼功的权利。这些权利是受《联合国人权宣言》和《公民权利和政治权利国际公约》所保护的。”#</p>
 <p>责任编辑：高静</p>
 	
@@ -31,42 +31,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fxljth3580/djy/blob/master/gb/20/11/24/n12573016.md#1">河南法轮功学员白春花不到6天遭迫害致死</a></li>
-<li><a href="https://github.com/fxljth3580/djy/blob/master/gb/20/11/25/n12574450.md#1">重庆七旬法轮功学员余业彝生前遭受的迫害</a></li>
-<li><a href="https://github.com/fxljth3580/djy/blob/master/gb/20/11/25/n12574949.md#1">回复请愿联署 加外长：续关注法轮功受迫害</a></li>
-<li><a href="https://github.com/fxljth3580/djy/blob/master/gb/20/11/26/n12577054.md#1">澳洲议员谴责中共对法轮功的迫害</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/11/24/n12573016.md#1">河南法轮功学员白春花不到6天遭迫害致死</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/11/25/n12574450.md#1">重庆七旬法轮功学员余业彝生前遭受的迫害</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/11/25/n12574949.md#1">回复请愿联署 加外长：续关注法轮功受迫害</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/11/26/n12577054.md#1">澳洲议员谴责中共对法轮功的迫害</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10785014.md#1" target="_blank">共产暴政录：镇压“反革命”运动</a></li><li><a href="https://github.com/fxljth3580/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/5/n3676026.md#1" target="_blank">老警察讲的笑话让人想哭</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/24/n11208799.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇（5）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/11/5/n4566246.md#1" target="_blank">患“不死绝症”大陆女士神奇“重生”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/22/n12567180.md#1">曾预言中共病毒 英灵媒再预测2021年大事</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/16/n12553592.md#1">美国大十字日全食带预言川普大选及末世大决战</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/26/n12576644.md#1">木星与土星在冬至相合 800年来罕见天象</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/25/n12575381.md#1">救命之恩 “新世纪影视”演员感恩李洪志大师（中）</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/20/n12563807.md#1">《诸世纪》中第一个“反救世主”魔鬼是谁？</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/28/n12581019.md#1">【拍案惊奇】川普酝酿大抓捕？左媒白宫撒泼</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/28/n12581710.md#1">【财商天下】感恩节启示 川普创纪录的经济数据</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/26/n12577815.md#1">【直播】制止窃选 美各州周末挺川集会</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/26/n12576905.md#1">【大选更新11·26】律师：感谢川普总统</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/10/9/n12463902.md#1">【内幕】中共隐瞒文昌航天发射场突发事件</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/26/n12576238.md#1">鲍威尔乔州提交百页诉状 被指如炸弹之母</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/26/n12578100.md#1">范冰冰复出再遇阻？中共广电总局又发禁令</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/26/n12577188.md#1">谢金燕制作人吕晓栋猝逝 传倒卧高以翔墓园旁</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/27/n12580299.md#1">吴秀波小三狱中近况曝光 遭拴铁链成严管对象</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/25/n12575491.md#1">遭旧爱追款现身法庭 星爷笑言高院是否要装修</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/25/n12575280.md#1">章子怡为小苹果庆生 两人相互依偎似亲母女</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/26/n12576644.md#1">木星与土星在冬至相合 800年来罕见天象</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/26/n12576231.md#1">超萌拉布拉多犬 台海关缉毒犬宝宝开放寄养</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/25/n12573264.md#1">容易被激怒？压制火气你要学会这样说话</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/27/n12579069.md#1">美国警察组成人链 惊险抢救开车入河的女子</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/27/n12578737.md#1">捷克的鹿离奇抢走猎人的枪 跑进树林里</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fxljth3580/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fxljth3580/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/27/n12580474.htm">宁夏41法轮功学员遭非法关押绑架 近况不明</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/27/n12580474.htm">宁夏41法轮功学员遭非法关押绑架 近况不明</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fxljth3580/djy/blob/master/gb/20/11/27/n12580474.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fxljth3580/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fxljth3580/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fxljth3580/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fxljth3580/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxljth3580/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yirpaj3429/djy/blob/master/gb/20/11/27/n12580474.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
